<?xml version="1.0" encoding="utf-8"?>

<!--
TANGGAL  : 04 MEI 2022
NAMA     : UMAR SAID ADI PRANOTO
NIM      : 10119920
KELAS    : IF10
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".AlmostThereActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleAlmost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:gravity="center"
            android:layout_marginTop="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDescAlmost1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/almost1"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textDescAlmost2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/almost2"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textDescAlmost3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/almost3"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>